A few fixes for overflow.

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -10,6 +10,7 @@ a {
 #welcome-container {
   text-align: center;
   padding-top: 75px;
+  overflow: hidden;
 }
 
 #welcome {
@@ -48,6 +49,7 @@ a {
 
 #enter-button-container {
   padding-top: 35px;
+  padding-bottom: 50px;
   display: inline-block;
 }
 
